# jsb-flight-console

./: .gitignore  CMakeLists.txt  CMakePresets.json  JSBout172B.csv  Makefile  README.md  compile_commands.json
.cache/clangd/index/: main.cpp.3BFABECBDF2F9ECB.idx
scripts/: run-console.sh  run-flightgear.sh
src/: main.cpp
src/control/: ControlInput.hpp  KeyboardInput.cpp  KeyboardInput.hpp
src/flightgear/: FlightGearSender.cpp  FlightGearSender.hpp  NetFdmSocket.hpp
src/simulation/: Simulation.cpp  Simulation.hpp
